# dynamic-positioning

./: CMakeLists.txt  architecture.uxf  main_activity.uxf  readme.md
logs/: plot.plt
src/: PhidgetHelperFunctions.c  PhidgetHelperFunctions.h  RCServo.c  RCServo.h  VoltageInput.c  VoltageInput.h  animate.c  animate.h  main.c
